--- a/lib/l10n/app_it.arb
+++ b/lib/l10n/app_it.arb
@@ -1,7 +1,5 @@
 {
     "title": "Allontana gli Pterodattili",
-    "service: {
-        "enable": "Abilita servizio",
-        "disable": "Disabilita servizio"
-    }
+    "enableService": "Abilita servizio",
+    "disableService": "Disabilita servizio"
 }
