--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -1,5 +1,7 @@
 {
     "title": "Keep Pterodactyls Away",
     "enableService": "Enable service",
-    "disableService": "Disable service"
+    "disableService": "Disable service",
+    "notifications": "Notifications",
+    "notificationBody": "You kept away {number} pterodactyls"
 }
