Translate service related strings

--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -3,5 +3,8 @@
     "enableService": "Enable service",
     "disableService": "Disable service",
     "notifications": "Notifications",
-    "notificationBody": "You kept away {number} pterodactyls"
+    "notificationBody": "You kept away {number} pterodactyls",
+    "service": "Service",
+    "enabled": "Enabled",
+    "disabled": "Disabled"
 }
