Show value in notifications

--- a/android/app/src/main/res/values-b+it/strings.xml
+++ b/android/app/src/main/res/values-b+it/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Allontana gli Pterodattili</string>
+    <string name="notifications">Notifiche</string>
+    <string name="notification_body">Hai allontanato %1$d pterodattili</string>
 </resources>
